# yoink

./: .gitignore  DESIGN.md  LICENSE  README.md  mprocs.yaml  package.json  turbo.json
.github/workflows/: ci.yml  deploy.yml  desktop-release.yml  release.yml
apps/cli/: README.md  package.json  tsconfig.json
apps/cli/scripts/: build-binaries.ts  publish-npm.ts  release.ts  targets.ts
apps/cli/src/: index.ts
apps/cli/src/cli/: commands.ts  external-flags.ts  help.ts  router.ts
apps/cli/src/shared/: assert-never.ts  atomic-write.ts  claude-config.ts  claude-settings.ts  errors.ts  git-status.ts  gitignore.ts  keychain.ts  (+4 more)
apps/cli/tests/: action-list.test.ts  atomic-write.test.ts  credential-file-backend.test.ts  credential-store.test.ts  external-flags.test.ts  login-command.test.ts  lookup.test.ts  naming.test.ts  provider-service.test.ts  running-session.test.ts  targets.test.ts  validators.test.ts
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: build-sidecar.ts
apps/desktop/src/: app.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  panel.rs  pty.rs  settings.rs  sidecar.rs  store.rs  tray.rs  updates.rs  watcher.rs
apps/web/: components.json  next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/lib/: navigation.ts  og.tsx  seo.ts  site.ts  structured-data.ts  use-desktop-download.ts
apps/web/public/: CNAME  install.ps1  install.sh
apps/web/scripts/: finalize-og.ts  generate-icons.ts
docs/: README.md  contributing.md  development.md  external-providers.md  getting-started.md  how-it-works.md  interactive-menu.md  product.md  usage.md
(+105 files in other folders)
